--- a/ccsite/hugo.yaml
+++ b/ccsite/hugo.yaml
@@ -75,7 +75,7 @@ params:
         math: true
         toc: true
         readingTime: false
-        wordCount: true
+        # wordCount: true
         license:
             enabled: true
             default: Licensed under CC BY-NC-SA 4.0
